force-app/main/default/objects/filesconnect__LinkedFileToRecordJunction__c/filesconnect__LinkedFileToRecordJunction__c.object-meta.xml
<CustomObject>
    <label>LinkedFileToRecordJunction</label>
    <nameField>
        <label>LinkedFileToRecordJunction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LinkedFileToRecordJunctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>