force-app/main/default/objects/filesconnect__LinkedFileToRecordJunction__c/fields/filesconnect__FileName__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__FileName__c</fullName>
    <label>FileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>