force-app/main/default/objects/filesconnect__LinkedFileToRecordJunction__c/fields/filesconnect__LinkedFileId__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__LinkedFileId__c</fullName>
    <label>LinkedFileId</label>
    <length>44</length>
    <required>true</required>
    <type>Text</type>
</CustomField>