force-app/main/default/objects/filesconnect__LinkedFileToRecordJunction__c/fields/filesconnect__LinkedToRecordId__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__LinkedToRecordId__c</fullName>
    <label>LinkedToRecordId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>